          (http://www.packetfence.org/mantis/view.php?id=342)
        port 162 is opened on internal interface instead of management 
          interface
          (http://www.packetfence.org/mantis/view.php?id=344)
        removed configurator.pl reference to arp.listendevice
        perl-IPTables-IPv4 conflicts with PacketFence RPM
          (http://www.packetfence.org/mantis/view.php?id=348)


1.7.1
        fixed various issues with service_watcher
          (http://www.packetfence.org/mantis/view.php?id=319)
        added VLAN isolation template
          (http://www.packetfence.org/mantis/view.php?id=318)
        encourage usage of Net::RawIP version 0.2
          (http://www.packetfence.org/mantis/view.php?id=320)
        prohibit node deletion of connected nodes in VLAN isolation
          (http://www.packetfence.org/mantis/view.php?id=321)
        show 'reg/unreg' choices in node/add.php
          (http://www.packetfence.org/mantis/view.php?id=322)
        more precise trap parsing
          (http://www.packetfence.org/mantis/view.php?id=323)
        fixed iptables issue with iptables.post file
          (http://www.packetfence.org/mantis/view.php?id=325)
        added better log messages on violation close
          (http://www.packetfence.org/mantis/view.php?id=326)
        tests look in the wrong directory for pid files
          (http://www.packetfence.org/mantis/view.php?id=329)
        issues stopping processes
          (http://www.packetfence.org/mantis/view.php?id=324
           http://www.packetfence.org/mantis/view.php?id=327)
        iptables save/restore
          (http://www.packetfence.org/mantis/view.php?id=328)
        authentication module error messages
          (http://www.packetfence.org/mantis/view.php?id=330)
        Net::Pcap instead of Net::RawIP in dhcplistener
          (http://www.packetfence.org/mantis/view.php?id=267)
        new RADIUS authentication template
        database optimizations