@@ -544,6 +544,12 @@ inform the user that he/she must register before connectivity is allowed.  Conte
 /usr/local/pf/conf/templates/listener.msg
 EOT
 
+[interface.authorizedips]
+type=text
+description=<<EOT
+(Optional) list of IPs/subnets to authorize on this interface. If not specified, all IPs are authorized to connect. This can be used for example to limit access to the management interface to some specific hosts.
+EOT
+
 [interface.gateway]
 type=text
 description=<<EOT
