@@ -49,6 +49,7 @@
   <a href='general.html#locale'>locale</a><br>
   <a href='general.html#logo'>logo</a><br>
 <p><b>[interface]</b><br>
+  <a href='interface.html#authorizedips'>authorizedips</a><br>
   <a href='interface.html#gateway'>gateway</a><br>
   <a href='interface.html#ip'>ip</a><br>
   <a href='interface.html#mask'>mask</a><br>
