@@ -6,6 +6,9 @@
   <font
   <img src="/common/packetfence.png">
   <p><b><font size=+1>Configuration Reference - interface</font></b></p>
+<a name=authorizedips></a>
+<b>authorizedips</b> <i>(text)</i><br>
+(Optional) list of IPs/subnets to authorize on this interface. If not specified, all IPs are authorized to connect. This can be used for example to limit access to the management interface to some specific hosts.<p>
 <a name=gateway></a>
 <b>gateway</b> <i>(text)</i><br>
 Gateway of the named interface.<p>
